WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114046
[GStreamer] Segfault when attempting to install missing plugins
https://bugs.webkit.org/show_bug.cgi?id=114046
Summary
[GStreamer] Segfault when attempting to install missing plugins
Brendan Long
Reported
2013-04-05 11:00:06 PDT
[GStreamer] Segfault when attempting to install missing plugins
Attachments
Patch
(1.99 KB, patch)
2013-04-05 11:07 PDT
,
Brendan Long
no flags
Details
Formatted Diff
Diff
Backtrace
(3.48 KB, text/x-log)
2013-04-05 11:36 PDT
,
Brendan Long
no flags
Details
Patch
(2.03 KB, patch)
2013-04-05 11:56 PDT
,
Brendan Long
no flags
Details
Formatted Diff
Diff
Patch
(2.03 KB, patch)
2013-04-05 12:02 PDT
,
Brendan Long
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Brendan Long
Comment 1
2013-04-05 11:07:01 PDT
Created
attachment 196654
[details]
Patch
Brendan Long
Comment 2
2013-04-05 11:08:26 PDT
GStreamer 1.0:
http://gstreamer.freedesktop.org/data/doc/gstreamer/head/gst-plugins-base-libs/html/gst-plugins-base-libs-gstpbutilsinstallplugins.html#gst-install-plugins-async
GStreamer 0.10:
https://developer.gnome.org/gst-plugins-libs/0.10/gst-plugins-base-libs-gstpbutilsinstallplugins.html#gst-install-plugins-async
Early Warning System Bot
Comment 3
2013-04-05 11:11:27 PDT
Comment on
attachment 196654
[details]
Patch
Attachment 196654
[details]
did not pass qt-ews (qt): Output:
http://webkit-commit-queue.appspot.com/results/17438314
Early Warning System Bot
Comment 4
2013-04-05 11:13:10 PDT
Comment on
attachment 196654
[details]
Patch
Attachment 196654
[details]
did not pass qt-wk2-ews (qt): Output:
http://webkit-commit-queue.appspot.com/results/17442277
Brendan Long
Comment 5
2013-04-05 11:17:45 PDT
Nevermind, I read this wrong.
Brendan Long
Comment 6
2013-04-05 11:18:41 PDT
I do get a segfault here though, so I'm still trying to figure out why.
Brendan Long
Comment 7
2013-04-05 11:26:03 PDT
I guess this was added in
bug #34085
. I get segfaults on both Ubuntu and Fedora 18, using QtWebKit with GStreamer 1.0 if I open a page that requires plugins I don't have (specifically, a .ogv file with kate subtitles). I'm waiting for a build to finish so I get more details.
Brendan Long
Comment 8
2013-04-05 11:36:27 PDT
Created
attachment 196656
[details]
Backtrace
Philippe Normand
Comment 9
2013-04-05 11:47:17 PDT
Comment on
attachment 196654
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=196654&action=review
> Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:783 > +#ifdef GST_API_VERSION_1
You mean ifndef I suppose?
Philippe Normand
Comment 10
2013-04-05 11:48:48 PDT
Well the details argument is a list of strings in 0.10 and 1.0... The backtrace is interesting though, which exact release of GStreamer is this?
Brendan Long
Comment 11
2013-04-05 11:50:22 PDT
That patch was actually completely wrong. I saw that gchar** turned into const gchar * const and didn't notice that there was one more *. I think the real problem is that we're not null terminating the array. (In reply to
comment #10
)
> Well the details argument is a list of strings in 0.10 and 1.0... The backtrace is interesting though, which exact release of GStreamer is this?
The backtrace is from 1.0.6, but I think it occurs on 1.0.5 too (and probably 0.10 looking at the documentation).
Brendan Long
Comment 12
2013-04-05 11:56:34 PDT
Created
attachment 196662
[details]
Patch
Brendan Long
Comment 13
2013-04-05 12:02:35 PDT
Created
attachment 196663
[details]
Patch
Brendan Long
Comment 14
2013-04-05 12:04:01 PDT
(In reply to
comment #13
)
> Created an attachment (id=196663) [details] > Patch
This patch is because there was a style issue (detail_array instead of detailAray) and I didn't fix it correctly in the first patch. This patch fixes the problem for me.
Philippe Normand
Comment 15
2013-04-05 12:28:10 PDT
Comment on
attachment 196663
[details]
Patch Good catch Brendan! I wonder indeed how I didn't get this crash during the tests I did while writing the codec-installer patch.
WebKit Commit Bot
Comment 16
2013-04-05 12:43:30 PDT
Comment on
attachment 196663
[details]
Patch Clearing flags on attachment: 196663 Committed
r147787
: <
http://trac.webkit.org/changeset/147787
>
WebKit Commit Bot
Comment 17
2013-04-05 12:43:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug