[GStreamer] Segfault when attempting to install missing plugins https://bugs.webkit.org/show_bug.cgi?id=114046

gst_install_plugins_async expects a null terminated list, but we weren't
adding a null terminator.

Patch by Brendan Long <self@brendanlong.com> on 2013-04-05
Reviewed by Philippe Normand.

No new tests since this just fixes a segfault.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::handleMessage):

Canonical link: https://commits.webkit.org/132426@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147787 268f45cc-cd09-0410-ab3c-d52691b4dbfc